<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/primary">
        <item
            android:id="@+id/mapFragment"
            android:icon="@drawable/map"
            android:title="@string/Map" />

        <item
            android:id="@+id/favoriteSitesFragment"
            android:icon="@drawable/heart"
            android:title="@string/Favorites" />
    </group>
    <group android:id="@+id/ekstra" >
        <item
            android:id="@+id/tutorialFragment"
            android:icon="@drawable/info"
            android:title="@string/how_to_STIM" />

        <item
            android:id="@+id/appInfoFragment"
            android:icon="@drawable/boat"
            android:title="@string/app_info"/>
    </group>

</menu>