<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    android:backgroundTint="@color/skyblue"
    android:backgroundTintMode="multiply"
    android:gravity="center">

    <!--Background for the hamburgermenu -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:padding="7dp"
        android:src="@drawable/circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/boat"
                tools:ignore="ContentDescription,ImageContrastCheck"
                app:tint="@color/darkest_skyblue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/Appinfo_description"
                android:textAlignment="center"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/overwave"
                android:text="@string/datasources"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="@color/white"
                android:textSize="30sp" />


            <!-- APT-1: THREDDS-Smittepress -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:cardBackgroundColor="@color/api_card_color"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/api_title_color"
                        android:textSize="16sp"
                        android:text="@string/thredds_infectiouspressure" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/Infectiouspressure_description"
                        android:textColor="@color/api_text_color"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- APT-2: THREDDS NORKYST800 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/api_card_color"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/api_title_color"
                        android:textSize="16sp"
                        android:text="@string/thredds_norkyst800" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/Norkyst800_description"
                        android:textColor="@color/api_text_color"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- APT-3: Siteregister -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/api_card_color"
                app:cardCornerRadius="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/api_title_color"
                        android:textSize="16sp"
                        android:text="@string/Siteregister" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/siteregister_description"
                        android:textColor="@color/api_text_color"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- APT-4: Map and Geonorge-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/api_card_color"
                app:cardCornerRadius="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/api_title_color"
                        android:textSize="16sp"
                        android:text="@string/map_Geonorge" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/Map_geonorge_description"
                        android:textColor="@color/api_text_color"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- APT-5 : MET locationforecast -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/api_card_color"
                app:cardCornerRadius="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/api_title_color"
                        android:textSize="16sp"
                        android:text="@string/Met_locationforcast" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/api_text_color"
                        android:text="@string/Met_description" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- APT-6 : Maps static-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="@color/api_card_color"
                app:cardCornerRadius="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/api_title_color"
                        android:textSize="16sp"
                        android:text="@string/maps_static_api" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/api_text_color"
                        android:text="@string/maps_static_description" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- APT-7 : Barentswatch fishhealth-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="@color/api_card_color"
                app:cardCornerRadius="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@color/api_title_color"
                        android:textSize="16sp"
                        android:text="@string/barentswatch_fishhealth_api" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/api_text_color"
                        android:text="@string/barrentswatch_description" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/laget_av_team_16"
                android:textColor="@color/secondaryTextColor"
                android:layout_gravity="center"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="20dp"
                android:text="@string/version"
                android:textColor="@color/secondaryTextColor"
                android:layout_gravity="center"
                android:textAlignment="center"/>



        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>